--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
         "anonymization",
         "neuralyzer"
     ],
+    "repositories": [
+        {
+            "url": "https://github.com/sandergo90/neuralyzer.git",
+            "type": "vcs"
+        }
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -19,7 +25,8 @@
     "require": {
         "php": ">=5.6",
         "symfony/symfony": "~3.4",
-        "doctrine/orm": "^2.2.3"
+        "doctrine/orm": "^2.2.3",
+        "edyan/neuralyzer": "dev-master"
     },
     "autoload": {
         "psr-4": {
