--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:Kunstmaan/KunstmaanAnomyBundle.git"
+            "url": "git@github.com:sandergo90/neuralyzer.git"
         }
     ],
     "license": "MIT",
