--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,6 @@
         "anonymization",
         "neuralyzer"
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:sandergo90/neuralyzer.git"
-        }
-    ],
     "license": "MIT",
     "authors": [
         {
@@ -26,7 +20,7 @@
         "php": ">=5.6",
         "symfony/symfony": "~3.4",
         "doctrine/orm": "^2.2.3",
-        "edyan/neuralyzer": "~2.0"
+        "sandergo90/neuralyzer": "~2.0"
     },
     "autoload": {
         "psr-4": {
